# bookmarks

./: .gitignore  Dockerfile  Dockerfile.test  db.sqlite3  docker-compose.testing.yml  docker-compose.yml  pyproject.toml  tasks.py  tests.py
bookmarks/: config.json  settings.py  urls.py
markers/: admin.py  apps.py  core.py  custom_claims.py  local_observer.py  models.py  providers.py  serializers.py  signals.py  urls.py  views.py
markers/migrations/: 0001_initial.py  0002_auto_20201222_1128.py  0002_bookmark_last_time_visited.py  0003_stats.py  0004_bookmark_icon.py  0005_auto_20210217_1913.py
pages/: urls.py  views.py
templates/: base.html  home.html
tests/: conftest.py  test_endpoints.py  test_providers.py  test_utils.py  tests_utils.py
tests/cassettes/: test_martin_heinz_provider.yaml  test_medium_provider.yaml  test_provider_page_text.yaml
